simplify stream -> list code